[project]
name = "ragapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "ollama>=0.3.0",
    "llama-index-core>=0.14.21",
    "llama-index-readers-file>=0.6.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
    "llama-index-embeddings-huggingface>=0.7.0",
    "langgraph>=1.2.0",
    "langchain-core>=0.3.0",
    "fastembed>=0.8.0",
]
